--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
   <body>
     <script src="SpeechBubble.js" charset="utf-8"></script>
-    <script src="script.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/Level1.js" charset="utf-8"></script>
+    <script src="./js/boot.js" charset="utf-8"></script>
   </body>
 
 </html>
